--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <div id="app3">
     <div v-if="seen">Yoooo</div>
   </div>
+
+  <div id="app4">
+    <ol>
+      <li v-for="item in items">
+        {{ item.text }}
+      </li>
+    </ol>
+  </div>
   <script type="text/javascript">
     var app = new Vue({
       el: '#app',
@@ -34,6 +42,16 @@
       data: {
         seen: true,
       },
+    })
+    var app4 = new Vue({
+      el: '#app4',
+      data: {
+        items: [
+          { text: 'dfdsfsdfsd' },
+          { text: 'dfdsfsdfsd' },
+          { text: 'dfdsfsdfsd' },
+        ],
+      }
     })
   </script>
 </body>
