--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
       </li>
     </ol>
   </div>
+  
+  <div id="app5">
+    <div>{{ message }}</div>
+    <button v-on:click="reverseMessage">REVERSEE</button>
+  </div>
+
+  <div id="app6">
+    <p>{{ msg }}</p>
+    <input v-model="msg" />
+  </div>
   <script type="text/javascript">
     var app = new Vue({
       el: '#app',
@@ -52,6 +62,19 @@
           { text: 'dfdsfsdfsd' },
         ],
       }
+    })
+    var app5 = new Vue({
+      el: '#app5',
+      data: { message: 'Hey broooo' },
+      methods: {
+        reverseMessage: function() {
+          this.message = this.message.split('').reverse().join('')
+        }
+      }
+    })
+    var app6 = new Vue({
+      el: '#app6',
+      data: { msg: 'Hellooo' }
     })
   </script>
 </body>
