--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
     <p>{{ msg }}</p>
     <input v-model="msg" />
   </div>
+
+  <div id="dom-app1">
+    <h1 v-once>{{ title }}</h1>
+    <p>
+      {{ hello() }} - <a v-bind:href="link">Google</a>
+    </p>
+    <div v-html="finishedLink"></div>
+  </div>
+
   <script src="basic.js"></script>
+  <script src="dom.js"></script>
 </body>
 </html>
