--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
       <h1>Nah..</h1>
     </template>
     <button @click="show = !show">Toggle</button>
+    <ul>
+      <li v-for="(item, i) in items">{{ item }} ({{ i }})</li>
+    </ul>
+    <ul>
+      <template v-for="(item, i) in items">
+        <label>{{ i }}.</label>
+        {{ item }} 
+      </template>
+    </ul>
+    <ul>
+      <li v-for="person in persons">
+        <span v-for="(value, key, index) in person">
+          {{ key }}: {{ value }} 
+        </span>
+      </li>
+    </ul>
   </div>
 
   <script src="basic.js"></script>
