:fire: Monster Slayer :fire: : attack method

--- a/projects/monster-slayer/index.html
+++ b/projects/monster-slayer/index.html
@@ -12,7 +12,7 @@
       <div class="bar-wrapper">
         <h1>You</h1>
         <div class="bar">
-          <p class="bar-progress-label">{{ heroScore }}</p>
+          <p class="bar-progress-label">{{ heroLife }}</p>
           <div id="hero-bar" class="bar-progress">
           </div>
         </div>
@@ -20,7 +20,7 @@
       <div class="bar-wrapper">
         <h1>Monster</h1>
         <div class="bar">
-          <p class="bar-progress-label">{{ monsterScore }}</p>
+          <p class="bar-progress-label">{{ monsterLife }}</p>
           <div id="monster-bar" class="bar-progress">
           </div>
         </div>
