Move on to the next

--- a/projects/monster-slayer/index.html
+++ b/projects/monster-slayer/index.html
@@ -40,9 +40,9 @@
         <div class="btn" id="heal-btn" @click="heal">
           Heal
         </div>
-        <div class="btn" id="giveup-btn" @click="giveUp">
+        <!-- <div class="btn" id="giveup-btn" @click="giveUp">
           Give Up
-        </div>
+        </div> -->
       </template>
       <template v-else="isPlaying">
         <div
