--- a/index.html
+++ b/index.html
@@ -109,8 +109,14 @@
     <button @click="text = 'Updated'">Update Text</button>
     <button @click="destroy">Destroy Text</button>
   </div>
+
+  <div id="component-app1">
+    <my-cmp></my-cmp>
+    <my-cmp></my-cmp>
+  </div>
+
   <script src="basic.js"></script>
   <script src="dom.js"></script>
-  <script src="instance.js"></script>
+  <script src="instance-component.js"></script>
 </body>
 </html>
